套用fullcalendar 修正 filter.js 的 removeRecords 的BUG

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
@@ -147,6 +147,7 @@
             "/themes/js/extensions/highcharts-initialize.min.js",
             "/themes/vendor/bootstrap-datepicker/js/bootstrap-datepicker.min.js",
             "/themes/vendor/bootstrap-datepicker/locales/bootstrap-datepicker.zh-TW.min.js",
+            "/themes/vendor/fullcalendar/index.global.min.js",
             "/themes/vendor/moment/moment.min.js",
             "/themes/vendor/noUiSlider/nouislider.min.js",
             "/themes/vendor/wnumb/wNumb.min.js",
