--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/RelatedArticles/RelatedArticles.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/RelatedArticles/RelatedArticles.cshtml
@@ -16,7 +16,7 @@
             }
 
             <div class="c-section__content">
-                <div class="l-flex u-flex-col@lt u-flex-gap-xl u-flex-gap-sm@lt" relatedArticles>
+                <div class="l-flex l-flex--card">
                     @foreach (var item in Model.CardList)
                     {
                         <div class="l-flex__item">
