Update: 跨國債券型 調整為"債券型海外債券投資等級"

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceFundRank/PerformanceFundRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceFundRank/PerformanceFundRank.cshtml
@@ -47,7 +47,7 @@
                             <input type="radio" name="fundtype-1" value="上櫃股票型" class="o-pelletbox__input">
                             <span class="o-pelletbox__text">上櫃股票型</span>
                         </label><label class="o-pelletbox__item">
-                            <input type="radio" name="fundtype-1" value="跨國債券型" class="o-pelletbox__input">
+							<input type="radio" name="fundtype-1" value="債券型海外債券投資等級" class="o-pelletbox__input">
                             <span class="o-pelletbox__text">跨國債券型</span>
                         </label><label class="o-pelletbox__item">
                             <input type="radio" name="fundtype-1" value="跨國投資股票型區域型" class="o-pelletbox__input">
